--- a/.github/workflows/VERSION.yml
+++ b/.github/workflows/VERSION.yml
@@ -32,7 +32,14 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: main
-          
+      
+      - name: Setup GitHub SSH
+        uses: MrSquaare/ssh-setup-action@v2
+        with:
+          host: github.com
+          private-key: ${{ secrets.SSH_PRIVATE_KEY_GITHUB }}
+          private-key-name: github
+
       - name: Update version in geomais/version repo
         run: |
           git config --global user.name "github-actions"
